--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -48,8 +48,8 @@
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="type here"
@@ -77,8 +77,8 @@
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="27dp"
         android:ems="10"
         android:hint="type here"
@@ -91,14 +91,14 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="type here"
-        android:inputType="textEmailAddress"
+        android:inputType="textPassword"
         android:textColor="@color/whitish"
         app:layout_constraintBottom_toTopOf="@+id/alreadyHave"
         app:layout_constraintEnd_toEndOf="parent"
@@ -141,7 +141,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginBottom="24dp"
         android:text="@string/create"
-        android:textColor="@color/whitish"
+        android:textColor="@color/greiesh"
         android:textSize="48sp"
         app:layout_constraintBottom_toTopOf="@+id/mailLabel"
         app:layout_constraintStart_toStartOf="@+id/mailLabel"
